background color + font fixes

--- a/index.html
+++ b/index.html
@@ -139,12 +139,13 @@
             <br />
             <br />
 
-            <div style="text-align:center">
+            <!--- <div style="text-align:center">
                 <p>(Question: Do you want me to add a "sleep mode" button? <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdP99Nt0q8cxDThYm-vWe9NAC0R6S_oYntoVTCq9mZK-SAjqQ/viewform">Answer here</a>)</p>
                 <br />
+                !---->
 
                 <div class="thankyou">
-                    <h1 class="thankyou">Thank you</h1>
+                    <h1>Thank you</h1>
 
                     <p style="text-align:center">
                         <script id='fbx9hgl'>
@@ -159,8 +160,7 @@
                         background is from <a href="https://www.youtube.com/watch?v=YgmIibSnZs0">this youtube clip</a>. And
                         the ambient music playing from soundcloud is linked above. Built with love and whipped cream by Anders.
                 </div>
-            </div>
-
+            
             <div style="text-align:center" class="donate">
                 <p>Would you donate to support this?</p>
                 <div id="supportbtns"><button id="yesbtn">Yes</button><button id="nobtn">No</button></div>
