--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
 
             <!--- <div style="text-align:center">
                 <p>(Question: Do you want me to add a "sleep mode" button? <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdP99Nt0q8cxDThYm-vWe9NAC0R6S_oYntoVTCq9mZK-SAjqQ/viewform">Answer here</a>)</p>
-                <br />
-                !---->
+                <br /></div>
 
+                !---->
+                
                 <div class="thankyou">
                     <h1>Thank you</h1>
 
