--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Include in <head> to load fonts from Google -->
     <link href='https://fonts.googleapis.com/css?family=Lora:400italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="styles.css">
 
 
