Added contributions refernce

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         If you like this or want me to add more airports, ping me on twitter - it will make me smile. <br
                         /><br /> It uses a bunch of open API's, all mentioned below. Inspired by <a href=" http://youarelistening.to/">You are listening to</a>.
                         Thank you <a href="http://www.liveatc.net/">Live ATC</a> for live feeds of flight radio. The video
-                        background is from <a href="https://www.youtube.com/watch?v=YgmIibSnZs0">this youtube clip</a>. And
+                        background is from <a href="https://www.youtube.com/watch?v=YgmIibSnZs0">this youtube clip</a>. Some CSS animations are from the beautiful <a href="http://tobiasahlin.com/spinkit/">SpinKit project</a> by Tobias Ahlin. And
                         the ambient music playing from soundcloud is linked above. Built with love and whipped cream by Anders.
                 </div>
 
